fix missing service factory during import, related fdo#74333, cp#1000057

Change-Id: I2cce561587d82b0434ef2d3e65e5d35b7ff99260